--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               <p>Copyright &copy;
                 <script>document.write(new Date().getFullYear());</script> All rights reserved |
-                   by <a href="fmpiza.github.io/webfridolin" target="_blank"><font color="yellow">Fridolin</font></a></p>
+                   by <a href="https://fmpiza.github.io/webfridolin"><font color="yellow">Fridolin</font></a></p>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
         
             </div>
